    - BUGFIX: Torrent creator can now use files/folders from disk root (Gemlir)
    - BUGFIX: Update free disk space when changing drives in the add new torrent dialog
    - OTHER: Update italian translation.
    - LIBTORRENT: SOCKS5 fixes (0.16.10)
    - LIBTORRENT: Fix hanging issue on Windows when closing files (0.16.10)
    - LIBTORRENT: Cache can now be returned to the OS (0.16.10)

* Sat Mar 16 2013 - Christophe Dumez <chris@qbittorrent.org> - v3.0.9
    - BUGFIX: Raise qBittorrent windows when another instance is launched
    - BUGFIX: Show human readable names for network interfaces in preferences (Windows)
    - BUGFIX: Fix torrent creator bug when saving non-latin path (Windows)
    - BUGFIX: Enable 'copy magnet uri' for torrents without metadata too
    - BUGFIX: Fix a few JSON parser issues (Gelmir)
    - BUGFIX: Add support for gzipped encoded HTTP responses (daimor)
    - BUGFIX: Fix possibly missing "Add torrent" icon (Driim)
    - OTHER: Add search plugin for Legit Torrents

* Sun Jan 20 2013 - Christophe Dumez <chris@qbittorrent.org> - v3.0.8
    - BUGFIX: Fix support for --no-splash command line argument
    - BUGFIX: Fix compilation error with libtorrent v0.15
    - BUGFIX: Fix search issues with Python3
    - BUGFIX: Fix dead link about certificates in program preferences

* Sat Jan 19 2013 - Christophe Dumez <chris@qbittorrent.org> - v3.0.7
    - BUGFIX: Update max write cache size to 2048MB and set it to automatic by default (closes #148)
    - BUGFIX: Add m4v to the list of previewable file extensions (closes #216)
    - BUGFIX: Fix "Couldn't set environment variable..." message on start up (closes #245)
    - BUGFIX: Use right path separator in torrent addition dialog on Windows
    - BUGFIX: Fix "Set as default save path" setting (closes #254)
    - BUGFIX: Reenable disk cache on Windows since the memory issue seems to be gone
    - BUGFIX: Fixed several search engine plugins and removed the dead ones